@@ -1,5 +1,6 @@
 package liquibase.diff;
 
+import liquibase.Scope;
 import liquibase.database.Database;
 import liquibase.diff.compare.CompareControl;
 import liquibase.exception.DatabaseException;
@@ -13,15 +14,12 @@ import java.util.*;
 public class DiffGeneratorFactory {
 
     private static DiffGeneratorFactory instance;
-    private List<DiffGenerator> implementedGenerators = new ArrayList<DiffGenerator>();
+    private List<DiffGenerator> implementedGenerators = new ArrayList<>();
 
     protected DiffGeneratorFactory() {
         try {
-            Class[] classes = ServiceLocator.getInstance().findClasses(DiffGenerator.class);
-
-            //noinspection unchecked
-            for (Class<? extends DiffGenerator> clazz : classes) {
-                register(clazz.getConstructor().newInstance());
+            for (DiffGenerator diffGenerator : Scope.getCurrentScope().getServiceLocator().findInstances(DiffGenerator.class)) {
+                register(diffGenerator);
             }
 
         } catch (Exception e) {
@@ -29,7 +27,7 @@ public class DiffGeneratorFactory {
         }
     }
 
-    public static DiffGeneratorFactory getInstance() {
+    public static synchronized DiffGeneratorFactory getInstance() {
         if (instance == null) {
             instance = new DiffGeneratorFactory();
         }
@@ -42,10 +40,10 @@ public class DiffGeneratorFactory {
 
 
     public DiffGenerator getGenerator(Database referenceDatabase, Database comparisonDatabase) {
-        SortedSet<DiffGenerator> foundGenerators = new TreeSet<DiffGenerator>(new Comparator<DiffGenerator>() {
+        SortedSet<DiffGenerator> foundGenerators = new TreeSet<>(new Comparator<DiffGenerator>() {
             @Override
             public int compare(DiffGenerator o1, DiffGenerator o2) {
-                return -1 * new Integer(o1.getPriority()).compareTo(o2.getPriority());
+                return -1 * Integer.valueOf(o1.getPriority()).compareTo(o2.getPriority());
             }
         });
 
@@ -55,8 +53,8 @@ public class DiffGeneratorFactory {
             }
         }
 
-        if (foundGenerators.size() == 0) {
-            throw new UnexpectedLiquibaseException("Cannot find DiffGenerator for "+referenceDatabase.getShortName()+", "+comparisonDatabase.getShortName());
+        if (foundGenerators.isEmpty()) {
+            throw new UnexpectedLiquibaseException("Cannot find DiffGenerator for " + referenceDatabase.getShortName() + ", " + comparisonDatabase.getShortName());
         }
 
         try {
