@@ -1,16 +1,12 @@
 package liquibase.lockservice;
 
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Map;
-import java.util.SortedSet;
-import java.util.TreeSet;
-import java.util.concurrent.ConcurrentHashMap;
-
+import liquibase.Scope;
 import liquibase.database.Database;
 import liquibase.exception.UnexpectedLiquibaseException;
 import liquibase.servicelocator.ServiceLocator;
+
+import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
 
 /**
  * @author John Sanda
@@ -19,9 +15,9 @@ public class LockServiceFactory {
 
 	private static LockServiceFactory instance;
 
-	private List<LockService> registry = new ArrayList<LockService>();
+	private List<LockService> registry = new ArrayList<>();
 
-	private Map<Database, LockService> openLockServices = new ConcurrentHashMap<Database, LockService>();
+	private Map<Database, LockService> openLockServices = new ConcurrentHashMap<>();
 
 	public static synchronized LockServiceFactory getInstance() {
 		if (instance == null) {
@@ -38,17 +34,14 @@ public class LockServiceFactory {
     }
 
 
-    public static void reset() {
+    public static synchronized void reset() {
         instance = null;
     }
 
     private LockServiceFactory() {
-		Class<? extends LockService>[] classes;
 		try {
-			classes = ServiceLocator.getInstance().findClasses(LockService.class);
-
-			for (Class<? extends LockService> clazz : classes) {
-				register(clazz.getConstructor().newInstance());
+			for (LockService lockService : Scope.getCurrentScope().getServiceLocator().findInstances(LockService.class)) {
+				register(lockService);
 			}
 
 		} catch (Exception e) {
@@ -62,12 +55,12 @@ public class LockServiceFactory {
 
 	public LockService getLockService(Database database) {
 		if (!openLockServices.containsKey(database)) {
-			SortedSet<LockService> foundServices = new TreeSet<LockService>(new Comparator<LockService>() {
-				@Override
+			SortedSet<LockService> foundServices = new TreeSet<>(new Comparator<LockService>() {
+                @Override
                 public int compare(LockService o1, LockService o2) {
-					return -1 * new Integer(o1.getPriority()).compareTo(o2.getPriority());
-				}
-			});
+                    return -1 * Integer.valueOf(o1.getPriority()).compareTo(o2.getPriority());
+                }
+            });
 
 			for (LockService lockService : registry) {
 				if (lockService.supports(database)) {
@@ -75,7 +68,7 @@ public class LockServiceFactory {
 				}
 			}
 
-			if (foundServices.size() == 0) {
+			if (foundServices.isEmpty()) {
 				throw new UnexpectedLiquibaseException("Cannot find LockService for " + database.getShortName());
 			}
 
@@ -91,7 +84,7 @@ public class LockServiceFactory {
 
 	}
 
-	public void resetAll() {
+	public synchronized void resetAll() {
 		for (LockService lockService : registry) {
 			lockService.reset();
 		}
